objects/Address_Purpose__c.object
<CustomObject>
    <fields>
        <fullName>Address_Purpose__c</fullName>
        <label>Address Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Sold To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address reference field</description>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Address Purpose List</relationshipLabel>
        <relationshipName>Address_Purpose</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Inactive?</label>
        <type>Checkbox</type>
    </fields>
    <label>Address Purpose</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Address Purpose #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Purpose</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>